force-app/main/default/objects/MessagingSession/fields/Teams_Bot_Service_Url__c.field-meta.xml
<CustomField>
    <fullName>Teams_Bot_Service_Url__c</fullName>
    <description>Bot Framework serviceUrl for this session's Teams chat, captured from the conversationUpdate activity fired when the bot is installed into the chat. Needed to route Connector API calls (posting live chat messages) to the right regional endpoint - see TeamsBotConversationService.</description>
    <label>Teams Bot Service Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>