force-app/main/default/objects/MessagingSession/fields/Teams_Chat_Id__c.field-meta.xml
<CustomField>
    <fullName>Teams_Chat_Id__c</fullName>
    <label>Teams Chat Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>