force-app/main/default/objects/MessagingSession/fields/Teams_Chat_Url__c.field-meta.xml
<CustomField>
    <fullName>Teams_Chat_Url__c</fullName>
    <label>Teams Chat URL</label>
    <type>Url</type>
</CustomField>